faust-ast/build_node/generated/FaustParser.js
"use strict";
var __importDefault = (this && this.__importDefault) || function (mod) {
    return (mod && mod.__esModule) ? mod : { "default": mod };
};
Object.defineProperty(exports, "__esModule", { value: true });
exports.TypelistContext = exports.FunContext = exports.SignatureContext = exports.TypeContext = exports.NameContext = exports.StringContext = exports.NumberContext = exports.VallistContext = exports.FstringContext = exports.UqstringContext = exports.IdentContext = exports.CaseruleContext = exports.FoutputsContext = exports.FinputsContext = exports.FprodContext = exports.FsumContext = exports.FseqContext = exports.FparContext = exports.SoundfileContext = exports.HbargraphContext = exports.VbargraphContext = exports.TgroupContext = exports.HgroupContext = exports.VgroupContext = exports.NentryContext = exports.HsliderContext = exports.VsliderContext = exports.CheckboxContext = exports.ButtonContext = exports.FvariableContext = exports.FconstContext = exports.FfunctionContext = exports.PrimitiveContext = exports.InfixexprContext = exports.ExpressionContext = exports.WithdefContext = exports.ParamsContext = exports.ArgumentContext = exports.DeflistContext = exports.RecnameContext = exports.RecinitionContext = exports.ReclistContext = exports.ArglistContext = exports.DefnameContext = exports.DefinitionContext = exports.StatementContext = exports.ImportStatementContext = exports.VariantContext = exports.ProgramContext = exports.VariantstatementContext = void 0;
// Generated from FaustParser.g4 by ANTLR 4.9.2
// jshint ignore: start
const antlr4_1 = __importDefault(require("antlr4"));
const FaustParserListener_js_1 = __importDefault(require("./FaustParserListener.js"));
const FaustParserVisitor_js_1 = __importDefault(require("./FaustParserVisitor.js"));
const atn = new antlr4_1.default.atn.ATNDeserializer().deserialize(serializedATN);
const decisionsToDFA = atn.decisionToState.map((ds, index) => new antlr4_1.default.dfa.DFA(ds, index));
const sharedContextCache = new antlr4_1.default.PredictionContextCache();
class FaustParser extends antlr4_1.default.Parser {
    constructor(input) {
        super(input);
        this._interp = new antlr4_1.default.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FaustParser.ruleNames;
        this.literalNames = FaustParser.literalNames;
        this.symbolicNames = FaustParser.symbolicNames;
    }
    get atn() {
        return atn;
    }
    sempred(localctx, ruleIndex, predIndex) {
        switch (ruleIndex) {
            case 7:
                return this.arglist_sempred(localctx, predIndex);
            case 12:
                return this.argument_sempred(localctx, predIndex);
            case 13:
                return this.params_sempred(localctx, predIndex);
            case 15:
                return this.expression_sempred(localctx, predIndex);
            case 16:
                return this.infixexpr_sempred(localctx, predIndex);
            case 42:
                return this.vallist_sempred(localctx, predIndex);
            case 49:
                return this.typelist_sempred(localctx, predIndex);
            default:
                throw "No predicate with index:" + ruleIndex;
        }
    }
    arglist_sempred(localctx, predIndex) {
        switch (predIndex) {
            case 0:
                return this.precpred(this._ctx, 1);
            default:
                throw "No predicate with index:" + predIndex;
        }
    }
    ;
    argument_sempred(localctx, predIndex) {
        switch (predIndex) {
            case 1:
                return this.precpred(this._ctx, 4);
            case 2:
                return this.precpred(this._ctx, 3);
            case 3:
                return this.precpred(this._ctx, 2);
            default:
                throw "No predicate with index:" + predIndex;
        }
    }
    ;
    params_sempred(localctx, predIndex) {
        switch (predIndex) {
            case 4:
                return this.precpred(this._ctx, 1);
            default:
                throw "No predicate with index:" + predIndex;
        }
    }
    ;
    expression_sempred(localctx, predIndex) {
        switch (predIndex) {
            case 5:
                return this.precpred(this._ctx, 5);
            case 6:
                return this.precpred(this._ctx, 4);
            case 7:
                return this.precpred(this._ctx, 3);
            case 8:
                return this.precpred(this._ctx, 2);
            case 9:
                return this.precpred(this._ctx, 6);
            case 10:
                return this.precpred(this._ctx, 1);
            default:
                throw "No predicate with index:" + predIndex;
        }
    }
    ;
    infixexpr_sempred(localctx, predIndex) {
        switch (predIndex) {
            case 11:
                return this.precpred(this._ctx, 20);
            case 12:
                return this.precpred(this._ctx, 17);
            case 13:
                return this.precpred(this._ctx, 16);
            case 14:
                return this.precpred(this._ctx, 15);
            case 15:
                return this.precpred(this._ctx, 14);
            case 16:
                return this.precpred(this._ctx, 13);
            case 17:
                return this.precpred(this._ctx, 12);
            case 18:
                return this.precpred(this._ctx, 11);
            case 19:
                return this.precpred(this._ctx, 10);
            case 20:
                return this.precpred(this._ctx, 9);
            case 21:
                return this.precpred(this._ctx, 8);
            case 22:
                return this.precpred(this._ctx, 7);
            case 23:
                return this.precpred(this._ctx, 6);
            case 24:
                return this.precpred(this._ctx, 5);
            case 25:
                return this.precpred(this._ctx, 4);
            case 26:
                return this.precpred(this._ctx, 3);
            case 27:
                return this.precpred(this._ctx, 2);
            case 28:
                return this.precpred(this._ctx, 1);
            case 29:
                return this.precpred(this._ctx, 22);
            case 30:
                return this.precpred(this._ctx, 21);
            case 31:
                return this.precpred(this._ctx, 19);
            case 32:
                return this.precpred(this._ctx, 18);
            default:
                throw "No predicate with index:" + predIndex;
        }
    }
    ;
    vallist_sempred(localctx, predIndex) {
        switch (predIndex) {
            case 33:
                return this.precpred(this._ctx, 1);
            default:
                throw "No predicate with index:" + predIndex;
        }
    }
    ;
    typelist_sempred(localctx, predIndex) {
        switch (predIndex) {
            case 34:
                return this.precpred(this._ctx, 1);
            default:
                throw "No predicate with index:" + predIndex;
        }
    }
    ;
    variantstatement() {
        let localctx = new VariantstatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, FaustParser.RULE_variantstatement);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 101;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            do {
                this.state = 100;
                this.variant();
                this.state = 103;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            } while (((((_la - 101)) & ~0x1f) == 0 && ((1 << (_la - 101)) & ((1 << (FaustParser.FLOATMODE - 101)) | (1 << (FaustParser.DOUBLEMODE - 101)) | (1 << (FaustParser.QUADMODE - 101)) | (1 << (FaustParser.FIXEDPOINTMODE - 101)))) !== 0));
            this.state = 105;
            localctx.variantStatement = this.statement();
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    program() {
        let localctx = new ProgramContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, FaustParser.RULE_program);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 111;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (((((_la - 90)) & ~0x1f) == 0 && ((1 << (_la - 90)) & ((1 << (FaustParser.IMPORT - 90)) | (1 << (FaustParser.DECLARE - 90)) | (1 << (FaustParser.FLOATMODE - 90)) | (1 << (FaustParser.DOUBLEMODE - 90)) | (1 << (FaustParser.QUADMODE - 90)) | (1 << (FaustParser.FIXEDPOINTMODE - 90)) | (1 << (FaustParser.IDENT - 90)))) !== 0)) {
                this.state = 109;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case FaustParser.IMPORT:
                    case FaustParser.DECLARE:
                    case FaustParser.IDENT:
                        this.state = 107;
                        this.statement();
                        break;
                    case FaustParser.FLOATMODE:
                    case FaustParser.DOUBLEMODE:
                    case FaustParser.QUADMODE:
                    case FaustParser.FIXEDPOINTMODE:
                        this.state = 108;
                        this.variantstatement();
                        break;
                    default:
                        throw new antlr4_1.default.error.NoViableAltException(this);
                }
                this.state = 113;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 114;
            this.match(FaustParser.EOF);
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    variant() {
        let localctx = new VariantContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, FaustParser.RULE_variant);
        try {
            this.state = 120;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case FaustParser.FLOATMODE:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 116;
                    localctx.precision = this.match(FaustParser.FLOATMODE);
                    break;
                case FaustParser.DOUBLEMODE:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 117;
                    localctx.precision = this.match(FaustParser.DOUBLEMODE);
                    break;
                case FaustParser.QUADMODE:
                    this.enterOuterAlt(localctx, 3);
                    this.state = 118;
                    localctx.precision = this.match(FaustParser.QUADMODE);
                    break;
                case FaustParser.FIXEDPOINTMODE:
                    this.enterOuterAlt(localctx, 4);
                    this.state = 119;
                    localctx.precision = this.match(FaustParser.FIXEDPOINTMODE);
                    break;
                default:
                    throw new antlr4_1.default.error.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    importStatement() {
        let localctx = new ImportStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, FaustParser.RULE_importStatement);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 122;
            this.match(FaustParser.IMPORT);
            this.state = 123;
            this.match(FaustParser.LPAR);
            this.state = 124;
            localctx.importName = this.uqstring();
            this.state = 125;
            this.match(FaustParser.RPAR);
            this.state = 126;
            this.match(FaustParser.ENDDEF);
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    statement() {
        let localctx = new StatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, FaustParser.RULE_statement);
        try {
            this.state = 141;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 4, this._ctx);
            switch (la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 128;
                    localctx.imp = this.importStatement();
                    break;
                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 129;
                    this.match(FaustParser.DECLARE);
                    this.state = 130;
                    localctx.decname = this.name();
                    this.state = 131;
                    localctx.decval = this.string();
                    this.state = 132;
                    this.match(FaustParser.ENDDEF);
                    break;
                case 3:
                    this.enterOuterAlt(localctx, 3);
                    this.state = 134;
                    this.match(FaustParser.DECLARE);
                    this.state = 135;
                    localctx.decarg = this.name();
                    this.state = 136;
                    localctx.decname = this.name();
                    this.state = 137;
                    localctx.decval = this.string();
                    this.state = 138;
                    this.match(FaustParser.ENDDEF);
                    break;
                case 4:
                    this.enterOuterAlt(localctx, 4);
                    this.state = 140;
                    localctx.def = this.definition();
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    definition() {
        let localctx = new DefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, FaustParser.RULE_definition);
        try {
            this.state = 156;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 5, this._ctx);
            switch (la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 143;
                    localctx.identname = this.defname();
                    this.state = 144;
                    this.match(FaustParser.LPAR);
                    this.state = 145;
                    localctx.args = this.arglist(0);
                    this.state = 146;
                    this.match(FaustParser.RPAR);
                    this.state = 147;
                    this.match(FaustParser.DEF);
                    this.state = 148;
                    localctx.expr = this.expression(0);
                    this.state = 149;
                    this.match(FaustParser.ENDDEF);
                    break;
                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 151;
                    localctx.identname = this.defname();
                    this.state = 152;
                    this.match(FaustParser.DEF);
                    this.state = 153;
                    localctx.expr = this.expression(0);
                    this.state = 154;
                    this.match(FaustParser.ENDDEF);
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    defname() {
        let localctx = new DefnameContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, FaustParser.RULE_defname);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 158;
            this.ident();
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    arglist(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        const _parentctx = this._ctx;
        const _parentState = this.state;
        let localctx = new ArglistContext(this, this._ctx, _parentState);
        let _prevctx = localctx;
        const _startState = 14;
        this.enterRecursionRule(localctx, 14, FaustParser.RULE_arglist, _p);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 161;
            localctx.arg = this.argument(0);
            this._ctx.stop = this._input.LT(-1);
            this.state = 168;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
            while (_alt != 2 && _alt != antlr4_1.default.atn.ATN.INVALID_ALT_NUMBER) {
                if (_alt === 1) {
                    if (this._parseListeners !== null) {
                        this.triggerExitRuleEvent();
                    }
                    _prevctx = localctx;
                    localctx = new ArglistContext(this, _parentctx, _parentState);
                    localctx.list = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, FaustParser.RULE_arglist);
                    this.state = 163;
                    if (!(this.precpred(this._ctx, 1))) {
                        throw new antlr4_1.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 164;
                    localctx.op = this.match(FaustParser.PAR);
                    this.state = 165;
                    localctx.arg = this.argument(0);
                }
                this.state = 170;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 6, this._ctx);
            }
        }
        catch (error) {
            if (error instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = error;
                this._errHandler.reportError(this, error);
                this._errHandler.recover(this, error);
            }
            else {
                throw error;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return localctx;
    }
    reclist() {
        let localctx = new ReclistContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, FaustParser.RULE_reclist);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 174;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === FaustParser.DELAY1) {
                this.state = 171;
                this.recinition();
                this.state = 176;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    recinition() {
        let localctx = new RecinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, FaustParser.RULE_recinition);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 177;
            localctx.identname = this.recname();
            this.state = 178;
            this.match(FaustParser.DEF);
            this.state = 179;
            localctx.expr = this.expression(0);
            this.state = 180;
            this.match(FaustParser.ENDDEF);
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    recname() {
        let localctx = new RecnameContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, FaustParser.RULE_recname);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 182;
            this.match(FaustParser.DELAY1);
            this.state = 183;
            localctx.identname = this.ident();
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    deflist() {
        let localctx = new DeflistContext(this, this._ctx, this.state);
        this.enterRule(localctx, 22, FaustParser.RULE_deflist);
        var _la = 0; // Token type
        try {
            this.state = 193;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case FaustParser.IDENT:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 185;
                    localctx.def = this.definition();
                    break;
                case FaustParser.FLOATMODE:
                case FaustParser.DOUBLEMODE:
                case FaustParser.QUADMODE:
                case FaustParser.FIXEDPOINTMODE:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 187;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    do {
                        this.state = 186;
                        this.variant();
                        this.state = 189;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                    } while (((((_la - 101)) & ~0x1f) == 0 && ((1 << (_la - 101)) & ((1 << (FaustParser.FLOATMODE - 101)) | (1 << (FaustParser.DOUBLEMODE - 101)) | (1 << (FaustParser.QUADMODE - 101)) | (1 << (FaustParser.FIXEDPOINTMODE - 101)))) !== 0));
                    this.state = 191;
                    localctx.def = this.definition();
                    break;
                default:
                    throw new antlr4_1.default.error.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    argument(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        const _parentctx = this._ctx;
        const _parentState = this.state;
        let localctx = new ArgumentContext(this, this._ctx, _parentState);
        let _prevctx = localctx;
        const _startState = 24;
        this.enterRecursionRule(localctx, 24, FaustParser.RULE_argument, _p);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 196;
            localctx.expr = this.infixexpr(0);
            this._ctx.stop = this._input.LT(-1);
            this.state = 209;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
            while (_alt != 2 && _alt != antlr4_1.default.atn.ATN.INVALID_ALT_NUMBER) {
                if (_alt === 1) {
                    if (this._parseListeners !== null) {
                        this.triggerExitRuleEvent();
                    }
                    _prevctx = localctx;
                    this.state = 207;
                    this._errHandler.sync(this);
                    var la_ = this._interp.adaptivePredict(this._input, 10, this._ctx);
                    switch (la_) {
                        case 1:
                            localctx = new ArgumentContext(this, _parentctx, _parentState);
                            localctx.left = _prevctx;
                            this.pushNewRecursionContext(localctx, _startState, FaustParser.RULE_argument);
                            this.state = 198;
                            if (!(this.precpred(this._ctx, 4))) {
                                throw new antlr4_1.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
                            }
                            this.state = 199;
                            localctx.op = this.match(FaustParser.SEQ);
                            this.state = 200;
                            localctx.right = this.argument(4);
                            break;
                        case 2:
                            localctx = new ArgumentContext(this, _parentctx, _parentState);
                            localctx.left = _prevctx;
                            this.pushNewRecursionContext(localctx, _startState, FaustParser.RULE_argument);
                            this.state = 201;
                            if (!(this.precpred(this._ctx, 3))) {
                                throw new antlr4_1.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
                            }
                            this.state = 202;
                            localctx.op = this._input.LT(1);
                            _la = this._input.LA(1);
                            if (!(_la === FaustParser.SPLIT || _la === FaustParser.MIX)) {
                                localctx.op = this._errHandler.recoverInline(this);
                            }
                            else {
                                this._errHandler.reportMatch(this);
                                this.consume();
                            }
                            this.state = 203;
                            localctx.right = this.argument(3);
                            break;
                        case 3:
                            localctx = new ArgumentContext(this, _parentctx, _parentState);
                            localctx.left = _prevctx;
                            this.pushNewRecursionContext(localctx, _startState, FaustParser.RULE_argument);
                            this.state = 204;
                            if (!(this.precpred(this._ctx, 2))) {
                                throw new antlr4_1.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 2)");
                            }
                            this.state = 205;
                            localctx.op = this.match(FaustParser.REC);
                            this.state = 206;
                            localctx.right = this.argument(3);
                            break;
                    }
                }
                this.state = 211;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 11, this._ctx);
            }
        }
        catch (error) {
            if (error instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = error;
                this._errHandler.reportError(this, error);
                this._errHandler.recover(this, error);
            }
            else {
                throw error;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return localctx;
    }
    params(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        const _parentctx = this._ctx;
        const _parentState = this.state;
        let localctx = new ParamsContext(this, this._ctx, _parentState);
        let _prevctx = localctx;
        const _startState = 26;
        this.enterRecursionRule(localctx, 26, FaustParser.RULE_params, _p);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 213;
            localctx.id = this.ident();
            this._ctx.stop = this._input.LT(-1);
            this.state = 220;
            this._errHandler.sync(this);
            var _alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
            while (_alt != 2 && _alt != antlr4_1.default.atn.ATN.INVALID_ALT_NUMBER) {
                if (_alt === 1) {
                    if (this._parseListeners !== null) {
                        this.triggerExitRuleEvent();
                    }
                    _prevctx = localctx;
                    localctx = new ParamsContext(this, _parentctx, _parentState);
                    localctx.pars = _prevctx;
                    this.pushNewRecursionContext(localctx, _startState, FaustParser.RULE_params);
                    this.state = 215;
                    if (!(this.precpred(this._ctx, 1))) {
                        throw new antlr4_1.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 1)");
                    }
                    this.state = 216;
                    this.match(FaustParser.PAR);
                    this.state = 217;
                    localctx.id = this.ident();
                }
                this.state = 222;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 12, this._ctx);
            }
        }
        catch (error) {
            if (error instanceof antlr4_1.default.error.RecognitionException) {
                localctx.exception = error;
                this._errHandler.reportError(this, error);
                this._errHandler.recover(this, error);
            }
            else {
                throw error;
            }
        }
        finally {
            this.unrollRecursionContexts(_parentctx);
        }
        return localctx;
    }
    withdef() {
